--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
             context: .
             dockerfile: Dockerfile
         image: trg_scheduler_cloned
-        container_name: trg_scheduler_app
+        container_name: trg_scheduler_cloned
         restart: unless-stopped
         working_dir: /var/www
         volumes:
