--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,11 @@ services:
             context: .
             dockerfile: Dockerfile
         image: trg_scheduler
-        container_name: trg_scheduler
+        container_name: trg_scheduler_app
         restart: unless-stopped
-        working_dir: /var/www
+        working_dir: /var/www/trg_scheduler
         volumes:
-            - .:/var/www
+            - .:/var/www/trg_scheduler
             - ./php/local.ini:/usr/local/etc/php/conf.d/local.ini
         networks:
             - trg_scheduler_network
@@ -22,7 +22,7 @@ services:
         ports:
             - "81:80"
         volumes:
-            - .:/var/www
+            - .:/var/www/trg_scheduler
             - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
         networks:
             - trg_scheduler_network
