--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name _;
 
-    root /var/www/public;
+    root /var/www/trg_scheduler/public;
     index index.php index.html index.htm;
 
     location / {
