--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
-        "maatwebsite/excel": "^3.1",
-        "barryvdh/debugbar": "^3.8"
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
